# grapple-kafka

./: Cargo.toml  changelog.md  readme.md
.cargo/: config.toml
examples/: consume.rs  produce.rs
examples/shared/: mod.rs
src/: config.rs  consumer.rs  dummy.rs  error.rs  lib.rs  producer.rs  service.rs
src/codec/: error.rs  mod.rs
